# tauri-vue

./: .prettierignore  README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src/components/: Greet.vue  HelloWorld.vue  NavBar.vue
src/routes/: Home.vue  HomeRoute.vue  Other.vue  OtherRoute.vue  router.ts
src/test/: example.test.ts
