[package]
name = "njs-tauri-vue"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false             # Remove this if you plan on publishing this crate.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tauri = { version = "1.5.3", features = ["shell-open"] }

anyhow = "1.0.75"
dirs = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
path-slash = "0.2.1"
toml = "0.8.8"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
